--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@langchain/community": "^0.3.30",
     "@langchain/core": "^0.3.39",
+    "@langchain/ollama": "^0.2.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
