--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-event-source": "^1.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-event-source": "^1.1.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   },
